# v

- Fix: Performance transaction group method no longer nullable, which in rare conditions could lead to duplicate and invalid groups

# v5.0.7

- Fix: Return 400 status instead of 500 when wizard hash is empty
- Fix: Unhandled RequestDataTooBig exception
- Increase aiohttp header size allowance to 16380 bytes and handle errors around unexpected header size gracefully

# v5.0.6

- Better tsvector trim

# v5.0.5

- Implement throttling for organization invite by email

# v5.0.0

## Breaking changes

- Require Postgresql 14+, dropping support for Postgresql 13.
- Squash and delete very old migrations. Upgrades from GlitchTip 3.x and below are not supported. Upgrade to 4.x first.

## Other changes

- Django 5.2

# v4.2.9

- Remove djstripe and stripe module, which use excessive ram. Replaced by our own stripe sync implementation.
- You may now set env var `GLITCHTIP_INSTANCE_NAME` to set a name that appears at login/register to help identify your server
- Celery 5.5
- Django Ninja 1.4
- Fix [bug](https://gitlab.com/glitchtip/glitchtip-backend/-/merge_requests/1454) in StatsV2Schema
- Fix several sentry api incompatibility [issues](https://gitlab.com/glitchtip/glitchtip-backend/-/merge_requests/1421).
- Add more content to issue search index
- Add OrganizationSocialApp, configurable in django admin, that allows Organizations to be associated to SocialApps and automatically assign users who log in with the associated SocialApp to the Organization. Signals currently disabled.

# v4.2.5

- Fix for event query params not displaying on frontend
- Adds initial custom stripe webhook integration (not yet used but visible in django admin)

# v4.2.4

- Initial custom stripe integration (not yet used but visible in django admin)
- Consistency fixes around how api ids are handled
- openapi spec fixes

# v4.2.1

- Critical fix for static file locations

# v4.2.0 (Broken, do not run)
